--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "myacquarium",
+  "appName": "myaquarium",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
