--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^5.30.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/cli": "^6.17.1",
     "@ionic/storage": "^2.3.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
