--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
-    "@capacitor/android": "^2.4.2",
-    "@capacitor/core": "2.4.2",
+    "@capacitor/core": "^3.2.3",
+    "@capacitor/network": "^1.0.3",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.30.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.8.0",
     "@ionic/cli": "^6.17.1",
     "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -37,7 +38,7 @@
     "@angular/compiler": "~11.2.14",
     "@angular/compiler-cli": "~11.2.14",
     "@angular/language-service": "~11.2.14",
-    "@capacitor/cli": "2.4.2",
+    "@capacitor/cli": "^3.2.3",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
