--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~12.2.6",
     "@angular/platform-browser-dynamic": "~12.2.6",
     "@angular/router": "~12.2.6",
-    "@capacitor/core": "^3.2.3",
+    "@capacitor/android": "^3.2.4",
+    "@capacitor/core": "^3.2.4",
     "@capacitor/network": "^1.0.3",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.30.0",
@@ -38,7 +39,7 @@
     "@angular/compiler": "~12.2.6",
     "@angular/compiler-cli": "~12.2.6",
     "@angular/language-service": "~12.2.6",
-    "@capacitor/cli": "^3.2.3",
+    "@capacitor/cli": "^3.2.4",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
