--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.2.6",
     "@capacitor/android": "^3.2.4",
     "@capacitor/core": "^3.2.4",
+    "@capacitor/ios": "^3.2.4",
     "@capacitor/network": "^1.0.3",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.30.0",
