--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.30.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.8.0",
+    "@ionic/angular": "^6.0.1",
+    "@ionic/angular-server": "^6.0.1",
     "@ionic/cli": "^6.17.1",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
