--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "@ionic/cli": "^6.17.1",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
-    "rxjs": "~6.5.5",
+    "rxjs": "^6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1301.2",
     "@angular-devkit/build-angular": "~12.2.6",
     "@angular/cli": "~12.2.6",
     "@angular/compiler": "~12.2.6",
